# Wulfenite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.context/history/: commits.jsonl  commits.md
configs/: infer.toml  pdfnet2_aishell.toml
docs/: TRAIN.md  architecture.md  datasets.md  onnx_contract.md
python/: README.md  pyproject.toml
python/src/wulfenite/: __init__.py  audio_features.py
python/src/wulfenite/data/: __init__.py  aishell.py  augmentation.py  composer.py  dns_noise.py  mixer.py  noise.py  pse_mixer.py
python/src/wulfenite/evaluation/: __init__.py  metrics.py
python/src/wulfenite/inference/: __init__.py  diagnose.py  enhance.py  realworld_diagnose.py  streaming.py  utils.py  whole.py
python/src/wulfenite/losses/: __init__.py  combined.py  inactive.py  mr_stft.py  multi_res.py  over_suppression.py  presence.py  recall.py  sdr.py  silence.py  spectral.py
python/src/wulfenite/models/: __init__.py  campplus.py  campplus_encoder.py  deep_filtering.py  dfnet2.py  dvector.py  ecapa_tdnn.py  erb.py  layers.py  modules.py  pdfnet2.py  pdfnet2_plus.py  s4d.py  speaker_encoder.py  speakerbeam_ss.py  tiny_ecapa.py  tse.py
python/src/wulfenite/scripts/: __init__.py  diagnose_artifacts.py  infer.py  resample_aishell3.py  resample_cnceleb.py  sample_scenes.py  train_pdfnet2.py
python/src/wulfenite/training/: __init__.py  checkpoint.py  config.py  kd_dataset.py  train.py  train_pdfnet2.py  train_tiny_ecapa.py
python/tests/: test_audio_features.py  test_campplus_encoder.py  test_composer.py  test_data.py  test_dvector.py  test_evaluation.py  test_inference.py  test_layers.py  test_losses.py  test_models.py  test_pse_mixer.py  test_s4d.py  test_speakerbeam_ss.py  test_training.py
rust/: Cargo.toml
rust/src/: audio.rs  main.rs
scripts/: README_TRAINING.md  aishell_mixer.py  augmentation.py  bsrnn_campplus.py  campplus.py  convert.py  diagnose_phase0a.py  download_campplus.py  infer_fuse.py  infer_fuse_debug.py  infer_fuse_streaming.py  prepare_clearvoice_video_tse_samples.py  pyproject.toml  train_fuse.py  train_phase0b.py  wesep_bsrnn.py
src/: audio.rs  inference.rs  loader.rs  main.rs  model.rs
src/model/: ecapa.rs  separator.rs  wesep.rs
src/streaming/: mod.rs
