[project]
name = "wulfenite"
version = "0.1.0"
description = "Wulfenite research crate — SpeakerBeam-SS target speaker extraction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
# Dependencies will be added as the pipeline is built out.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wulfenite"]

[tool.uv]
# Managed dev workflow; `uv sync` installs wulfenite in editable mode so
# `from wulfenite.models import ...` works from anywhere in the venv.
dev-dependencies = [
    "pytest>=8.0",
]
